feat: reloadable trust store !